--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,8 @@
     border-radius: 30px;
     font-size: 30px;
     transition: background 0.7s;
+    text-decoration: none;
+    color: black;
 }
 
 .button {
